k8s/k8s-objects/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nikita-app
  namespace: otus
  labels:
    app: nikita
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nikita-app
  template:
    metadata:
      labels:
        app: nikita-app
    spec:
      containers:
        - name: nikita-pod
          image: nikishqua/rest-app:latest
          ports:
            -   containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
