k8s/k8s-objects/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nikita-service
  namespace: otus
spec:
  selector:
    app: nikita-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8000
